load("@rules_proto_grpc//js:defs.bzl", "js_grpc_node_compile")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@retail_data_model_npm//:defs.bzl", "npm_link_all_packages")

PROTO_FILES = [
    "//api/inventory:model_proto",
    "//api/inventory:service_proto",
]

js_grpc_node_compile(
    name = "inventory_protos",
    protos = PROTO_FILES,
    visibility = ["//visibility:public"],
)

npm_package(
    name = "inventory",
    srcs = [
        ":inventory_protos",
        ":package.json",
    ],
    replace_prefixes = {
        "inventory_protos/api/inventory": "",
    },
    visibility = ["//visibility:public"],
)

npm_link_all_packages()
