load("@rules_proto_grpc//js:defs.bzl", "js_grpc_node_compile")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@retail_data_model_npm//:defs.bzl", "npm_link_all_packages")

PROTO_FILES = [
    "//api/party:model_proto",
]

js_grpc_node_compile(
    name = "party_protos",
    protos = PROTO_FILES,
    visibility = ["//visibility:public"],
)

npm_package(
    name = "party",
    srcs = [
        ":package.json",
        ":party_protos",
        ":tsconfig.json",
    ],
    replace_prefixes = {
        "party_protos/api/party": "",
    },
    visibility = ["//visibility:public"],
)

npm_link_all_packages()
