load("@rules_proto_grpc//js:defs.bzl", "js_grpc_node_compile")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@retail_data_model_npm//:defs.bzl", "npm_link_all_packages")

PROTO_FILES = [
    "//api/promotions:model_proto",
]

js_grpc_node_compile(
    name = "promotions_protos",
    protos = PROTO_FILES,
    visibility = ["//visibility:public"],
)

npm_package(
    name = "promotions",
    srcs = [
        ":package.json",
        ":promotions_protos",
    ],
    replace_prefixes = {
        "promotions_protos/api/promotions": "",
    },
    visibility = ["//visibility:public"],
)

npm_link_all_packages()
