load("@rules_proto_grpc//js:defs.bzl", "js_grpc_node_compile")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@retail_data_model_npm//:defs.bzl", "npm_link_all_packages")

PROTO_FILES = [
    "@com_google_googleapis//google/api:annotations_proto",
]

js_grpc_node_compile(
    name = "api_protos",
    protos = PROTO_FILES,
    visibility = ["//visibility:public"],
)

npm_package(
    name = "api",
    srcs = [
        ":api_protos",
        ":package.json",
    ],
    out = "api",
    replace_prefixes = {
        "api_protos/google/api": "",
    },
    visibility = ["//visibility:public"],
)

npm_link_all_packages()
