load("@rules_proto_grpc//js:defs.bzl", "js_grpc_node_compile")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@retail_data_model_npm//:defs.bzl", "npm_link_all_packages")

PROTO_FILES = [
    "@com_google_protobuf//:any_proto",
    "@com_google_protobuf//:api_proto",
    "@com_google_protobuf//:descriptor_proto",
    "@com_google_protobuf//:empty_proto",
    "@com_google_protobuf//:field_mask_proto",
    "@com_google_protobuf//:struct_proto",
    "@com_google_protobuf//:timestamp_proto",
]

js_grpc_node_compile(
    name = "protobuf_protos",
    protos = PROTO_FILES,
    visibility = ["//visibility:public"],
)

npm_package(
    name = "protobuf",
    srcs = [
        ":package.json",
        ":protobuf_protos",
    ],
    replace_prefixes = {
        "protobuf_protos/google/protobuf": "",
    },
    visibility = ["//visibility:public"],
)

npm_link_all_packages()
