# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# gazelle:ignore
load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = [
    "//examples/go:__subpackages__",
])

go_library(
    name = "model",
    srcs = [
        "errors.go",
        "event.go",
        "event_description.go",
        "event_record.go",
    ],
    importpath = "github.com/rrmcguinness/retail-data-model/events/pkg/model",
    deps = [
        "//sdk/go:common_go_proto",
        "//sdk/go:enums_go_proto",
        "//sdk/go:events_go_grpc",
        "//sdk/go:events_go_proto",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
