# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# gazelle:ignore
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "module",
    srcs = [
        "model_test.go",
    ],
    data = ["//examples/configs:events-test-config.json"],
    rundir = ".",
    deps = [
        "//examples/go/events/pkg/client",
        "//examples/go/events/pkg/model",
        "//examples/go/events/pkg/module",
        "//examples/go/events/pkg/service",
        "//examples/go/retail/pkg/common",
        "//examples/go/retail/pkg/server",
        "//sdk/go:common_go_proto",
        "//sdk/go:events_go_grpc",
        "//sdk/go:events_go_proto",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_google_cloud_go//:go_default_library",
        "@com_google_cloud_go_bigquery//:bigquery",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
