# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# gazelle:ignore
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//:build/go_deps.bzl", "WELL_KNOWN_TYPES")

go_test(
    name = "site_test",
    srcs = [
        "site_test.go",
    ],
    embed = ["//examples/go/location/pkg/model"],
    rundir = ".",
    deps = [
        "@com_github_stretchr_testify//assert",
    ],
)

go_test(
    name = "location_test",
    srcs = [
        "location_test.go",
    ],
    embed = ["//examples/go/location/pkg/model"],
    rundir = ".",
    deps = [
        "@com_github_stretchr_testify//assert",
    ],
)
